--- a/public/index.html
+++ b/public/index.html
@@ -2,24 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1a1a1a" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Track and monitor your favorite stocks in real-time"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,500&display=swap" rel="stylesheet">
+    
+    <!-- Preload fonts for better performance -->
+    <link 
+      rel="preconnect" 
+      href="https://fonts.googleapis.com" 
+      crossorigin
+    />
+    <link 
+      rel="preconnect" 
+      href="https://fonts.gstatic.com" 
+      crossorigin
+    />
+    <link 
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600&display=swap" 
+      rel="stylesheet"
+    />
+    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>$TOCK LOOKUP</title>
-    <style>
-      body {
-          font-family: 'Josefin Sans', sans-serif;
-      }
-  </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
